[gd_scene load_steps=3 format=3 uid="uid://1c1yti6wv2op"]

[ext_resource type="Script" path="res://src/ui/main_menu/controls_menu/controls_menu.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bt1o88yeyub4g" path="res://src/ui/main_menu/controls_menu/keybind_changer.tscn" id="2"]

[node name="controls_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 100.0
offset_right = -100.0
offset_bottom = -100.0
columns = 4

[node name="keybind_changer" parent="GridContainer" instance=ExtResource("2")]
layout_mode = 2
action_name = "test"

[node name="Button" parent="GridContainer/keybind_changer" index="1"]
focus_neighbor_right = NodePath("../../keybind_changer2/Button")

[node name="keybind_changer2" parent="GridContainer" instance=ExtResource("2")]
layout_mode = 2
action_name = "test2"
display_action_name = "Walk"

[node name="Button" parent="GridContainer/keybind_changer2" index="1"]
focus_neighbor_left = NodePath("../../keybind_changer/Button")

[node name="keybind_changer3" parent="GridContainer" instance=ExtResource("2")]
layout_mode = 2
action_name = "Escape"

[node name="Button" parent="GridContainer/keybind_changer3" index="1"]
focus_neighbor_left = NodePath("../../keybind_changer/Button")

[node name="reset_controls_to_default" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -134.0
offset_top = -128.0
offset_right = 135.0
offset_bottom = -57.0
grow_horizontal = 2
grow_vertical = 0
text = "MENU_OPTION_RESET_CONTROLS"

[node name="back" type="Button" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 24.0
offset_right = 128.0
offset_bottom = 80.0
text = "MENU_BACK"

[connection signal="pressed" from="reset_controls_to_default" to="." method="_on_reset_controls_to_default_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]

[editable path="GridContainer/keybind_changer"]
[editable path="GridContainer/keybind_changer2"]
[editable path="GridContainer/keybind_changer3"]
